--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-joblib==1.0.1
-numpy==1.20.2
-Pillow==8.1.2
-scikit-learn==0.24.1
-scipy==1.6.2
-threadpoolctl==2.1.0
 tqdm==4.59.0
+pytest==6.2.2
+numpy==1.20.2
+tabulate==0.8.9
+core==1.0.1
+Pillow==8.1.2
+scikit_learn==0.24.1
