--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "python.workspaceSymbols.exclusionPatterns": [
         "**/site-packages/**",
         "./data/"
-    ]
+    ],
+    "python.linting.enabled": true
 }
