--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/media/farhood/Data/Courses/Bio Master Courses/Spring 1400/Deep Learning/Assignments/Assignment #1/venv/bin/python3.9",
+    "python.pythonPath": "venv/bin/python",
     "python.formatting.provider": "autopep8",
     "python.formatting.autopep8Args": ["--max-line-length", "90", "--experimental"],
     "python.workspaceSymbols.exclusionPatterns": [
